--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset='utf-8'>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>SAPUI5 From Zero to Hero</title>
-			<script id="sap-ui-bootstrap"
+		<meta charset="utf-8">
+		<title>SAP UI5 From zero to Hero </title>
+		<script id="sap-ui-bootstrap"
 			src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
 			data-sap-ui-theme="sap_fiori_3"
-			data-sap-ui-resourceroots='{com.logaligroup.SAPUI5": "./"}'
+			data-sap-ui-resourceroots='{"logaligroup.SAPUI5": "./"}'
 			data-sap-ui-compatVersion="edge"
-			data-sap-ui-oninit="module:logaligroup/SAPUI5/index"
+			data-sap-ui-oninit="module:logaligroup.SAPUI5/index"
 			data-sap-ui-async="true"
 			data-sap-ui-frameOptions="trusted">
 		</script>
 	</head>
-	<body class="sapUiBody" ID="content">
-	</body>
+	<body>
+		<div>Hello Word</div>
+	</body> 
 </html>
