--- a/webapp/index.html
+++ b/webapp/index.html
@@ -8,12 +8,12 @@
 			data-sap-ui-theme="sap_fiori_3"
 			data-sap-ui-resourceroots='{"logaligroup.SAPUI5": "./"}'
 			data-sap-ui-compatVersion="edge"
-			data-sap-ui-oninit="module:logaligroup.SAPUI5/index"
+			data-sap-ui-oninit="module:logaligroup/SAPUI5/index"
 			data-sap-ui-async="true"
 			data-sap-ui-frameOptions="trusted">
 		</script>
 	</head>
-	<body>
-		<div>Hello Word</div>
+	<body class="sapUiBody" id="content">
+	
 	</body> 
 </html>
