--- a/webapp/index.html
+++ b/webapp/index.html
@@ -8,12 +8,13 @@
 			data-sap-ui-theme="sap_fiori_3"
 			data-sap-ui-resourceroots='{"logaligroup.SAPUI5": "./"}'
 			data-sap-ui-compatVersion="edge"
-			data-sap-ui-oninit="module:logaligroup/SAPUI5/index"
+			data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
 			data-sap-ui-async="true"
 			data-sap-ui-frameOptions="trusted">
 		</script>
 	</head>
 	<body class="sapUiBody" id="content">
+		<div data-sap-ui-component data-name="logaligroup.SAPUI5" data-id="container" data-settings='{"id": "logaligroup"}'></div>
 	
 	</body> 
 </html>
